--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node app"
   },
   "dependencies": {
-    "express": "3.0.2",
-    "jade": "*"
+    "express": "3.x.x",
+    "mongodb": "1.x.x"
   }
 }
